@@ -3,36 +3,65 @@
     <parent>
         <groupId>io.github.linguaphylo</groupId>
         <artifactId>lphybeast-root</artifactId>
-        <version>${revision}</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
-
+    <name>lphybeast-mm</name>
     <artifactId>lphybeast-mm</artifactId>
-    <version>${lphybeastext.version}</version>
 
     <dependencies>
         <dependency>
             <groupId>io.github.linguaphylo</groupId>
             <artifactId>lphybeast</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.compevol</groupId>
+            <artifactId>beast-morph-models</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- Testing -->
         <dependency>
-            <groupId>beast2</groupId>
-            <artifactId>mm</artifactId>
-            <version>1.2.1</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/MM.addon.v1.2.1.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>io.github.linguaphylo</groupId>
-            <artifactId>lphybeast</artifactId>
-            <version>${parent.version}</version>
-            <classifier>tests</classifier>
-            <type>test-jar</type>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.15.0</version>
+                <configuration>
+                    <release>25</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <goals><goal>properties</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <BEAST_PACKAGE_PATH>${io.github.compevol:beast-base:jar}</BEAST_PACKAGE_PATH>
+                    </systemPropertyVariables>
+                    <argLine>
+                        --add-reads lphy.beast.mm=ALL-UNNAMED
+                        --add-reads lphy.beast=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
